# pandasql

./: .gitignore  AUTHORS.md  BLOGPOST.html  CHANGES  CHANGES.txt  DEMO_OUTPUT.txt  LICENSE  LICENSE.txt  MANIFEST.in  OLD_README.md  README.md  README.py  README.rst  README.txt  TEST_MYPANDAS_OUTPUT  TODO.md  demo.ipynb  demo.py  playground.ipynb  publish.sh  pyproject.toml  release.sh  requirements.txt  setup.py  test.sh  test_mypandas.ipynb  test_mypandas.py  test_mysql.py
.github/workflows/: test.yml
examples/: demo.py  demo2.py
mypandas/: sqldf.py
pandasql/: __init__.py  sqldf.py
pandasql/data/: births.csv  births_by_month.csv  meat.csv
pandasql/tests/: test_pandasql.py  test_utils.py  tests.py
pansql/: __init__.py  sqldf.py
pansql/tests/: test_pandasql.py  test_utils.py
src/mypandas/: __init__.py  example.py  sqldf.py
tests/: shared.py  test.sh  test_mypandas.py  test_pandasql.py  test_utils.py
